--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+:root{
+    --blue: #054895;
+    --amarelo: #fbb800;
+}
+
 body{
     height: 100vh;
 }
@@ -18,18 +23,22 @@ main{
     height: 60px;
 }
 
+.sair-botao{
+    max-width: 4rem;
+}
+
 main .container .col .card-group .container .row{
     background-color: #FFE2B4;
 }
 main .container .col .row a, main .container .col .row .sorteio{
-    background-color: #fbb800;
+    background-color: var(--amarelo);
 }
 main .container .col .row .result{
-    background-color: #072e84;
+    background-color: var(--blue);
 }
 
 header{
-    background-color: #072e84;
+    background-color: var(--blue);
     font-family: 'Georama', sans-serif;
     height: 10%;
     display: flex;
@@ -52,12 +61,14 @@ header .col-user {
     background-position-y: bottom;
 }
 
-
+.perfil_img{
+    border-radius: 100%;
+}
 /*CADASTRO E ENTRADA*/
 
 
 .container-fluid , .container-fluid main .container .col button, main .container .btn{
-    background-color: #072e84;
+    background-color: var(--blue);
 }
 
 .container-fluid main .container-lg {
@@ -70,12 +81,56 @@ header .col-user {
 }
 
 .container-fluid .container-lg a, .numParticipantes{
-    background-color: #fbb800;
+    background-color: var(--amarelo);
     font-family: 'Chakra Petch', sans-serif;
 }
 
-@media screen and (max-width: 820px) {
+.imgPrincipal{
+        width: 10rem;
+}
+
+@media screen and (max-width: 993px) {
     .container-fluid main .container, main .col{
         flex-direction: column;
     }
+}
+
+@media screen and (max-width: 993px) {
+    .imagem_user{
+        visibility: hidden;
+        width: 0rem;
+        height: 0rem;
+    }
+
+    .principal{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .informacoes{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: -3rem;
+    }
+
+    .botao{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sair-botao{
+        margin-top: 1rem;
+    }
+
+    .img_user{
+        margin-right: -2rem;
+    }
+    
 }
