--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ header .col-user {
     font-family: 'Chakra Petch', sans-serif;
 }
 
-.imgPrincipal{
-        width: 10rem;
+.batata{
+        width: 1rem;
 }
 
 @media screen and (max-width: 993px) {
