--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,40 +4,42 @@
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --blue: #054895;
     --amarelo: #fbb800;
 }
 
-body{
+body {
     height: 100vh;
 }
 
-main{
+main {
     font-family: 'Georama', sans-serif;
     height: 90%;
 }
 
-.img-user{
+.img-user {
     width: 60px;
     height: 60px;
 }
 
-.sair-botao{
+.sair-botao {
     max-width: 4rem;
 }
 
-main .container .col .card-group .container .row{
+main .container .col .card-group .container .row {
     background-color: #FFE2B4;
 }
-main .container .col .row a, main .container .col .row .sorteio{
+
+main .container .col .row a, main .container .col .row .sorteio {
     background-color: var(--amarelo);
 }
-main .container .col .row .result{
+
+main .container .col .row .result {
     background-color: var(--blue);
 }
 
-header{
+header {
     background-color: var(--blue);
     font-family: 'Georama', sans-serif;
     height: 10%;
@@ -45,7 +47,7 @@ header{
     align-items: center;
 }
 
-header img{
+header img {
     width: 6rem;
 }
 
@@ -55,19 +57,20 @@ header .col-user {
 }
 
 
-.img-fundo{
+.img-fundo {
     background: url(../img/image\ 25.png) rgb(255, 255, 255) 50% / cover no-repeat;
     background-size: 80%;
     background-position-y: bottom;
 }
 
-.perfil_img{
+.perfil_img {
     border-radius: 100%;
 }
+
 /*CADASTRO E ENTRADA*/
 
 
-.container-fluid , .container-fluid main .container .col button, main .container .btn{
+.container-fluid, .container-fluid main .container .col button, main .container .btn {
     background-color: var(--blue);
 }
 
@@ -80,31 +83,31 @@ header .col-user {
     flex-direction: row;
 }
 
-.container-fluid .container-lg a, .numParticipantes{
+.container-fluid .container-lg a, .numParticipantes {
     background-color: var(--amarelo);
     font-family: 'Chakra Petch', sans-serif;
 }
 
-.batata{
-        width: 1rem;
+.batata {
+    width: 1rem;
 }
 
 
 
 @media screen and (max-width: 993px) {
-    .container-fluid main .container, main .col{
+    .container-fluid main .container, main .col {
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 993px) {
-    .imagem_user{
+    .imagem_user {
         visibility: hidden;
         width: 0rem;
         height: 0rem;
     }
 
-    .principal{
+    .principal {
         width: 100%;
         height: 100%;
         display: flex;
@@ -113,7 +116,7 @@ header .col-user {
         align-items: center;
     }
 
-    .informacoes{
+    .informacoes {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -121,18 +124,46 @@ header .col-user {
         margin-left: -3rem;
     }
 
-    .botao{
+    .botao {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .sair-botao{
+    .sair-botao {
         margin-top: 1rem;
     }
 
-    .img_user{
+    .img_user {
         margin-right: -2rem;
     }
-    
+
+}
+
+/* codigo mobile */
+
+@media screen and (max-width: 993px) {
+    .botaoInicio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .botaoDeEntrada{
+        width: 10rem;
+        padding: 1rem;
+    }
+    .img-fundo{
+        background-size: 170%;
+    }
+    .containerSorteio{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .principal{
+        height: 100%;
+    }
+    .setinha{
+        visibility: hidden;
+    }
 }
